# marketing-campaign-ml

./: .dockerignore  .gitignore  Dockerfile  README.md  fly.toml  marketing.py  pyproject.toml  requirements.txt  response.py  test.py  train.py  train_response_model.ipynb  train_response_model.py
.ipynb_checkpoints/: train_response_model-checkpoint.ipynb
